fix struct of docs