@@ -1,129 +1,14 @@
-## BEAUTIFY
-装好的第一天自以为自己不会碰触美化这一块领域, 但是...... 它太漂亮了!
-
-LINUX 的桌面环境有:
-- GTK
-- Unity
-- Gname[最美]: 需要Ubuntu系统和浏览器共同安装即可运行
-
-## 窗口三金刚移左
-听说14版本前都是在左面。但是 Ubuntu18.04 移到了左面, 执行命令:
-
+## PREFACE
+简化版命令
 ```bash
-sudo  apt install gnome-tweaks`
-# alt+f2
-gnome-tweaks
+sudo apt update -y && sudo apt upgrade -y 
+
+sudo apt install git && sudo  apt install python3 && sudo apt install python3-pip && sudo apt install node.js && sudo apt install flameshot && sudo apt install kchmviewer && sudo apt install gthumb  && sudo apt install audacity 
+
+wget -qO - https://typora.io/linux/public-key.asc | sudo apt-key add - && sudo add-apt-repository 'deb https://typora.io/linux ./' && sudo apt-get update && sudo apt-get install typora && sudo apt install wget g++ git &&git clone "https://gitee.com/wszqkzqk/deepin-wine-for-ubuntu.git" && cd deepin-wine && sudo ./install.sh &&sudo wget "https://gitee.com/wszqkzqk/deepin-wine-containers-for-ubuntu/raw/master/deepin.com.wechat_2.6.8.65deepin0_i386.deb"  && sudo dpkg -i *wechat*deb && apt install libjpeg62:i386 && sudo wget "https://mirrors.aliyun.com/deepin/pool/non-free/d/deepin.com.qq.im/deepin.com.qq.im_9.1.8deepin0_i386.deb"  && sudo  dpkg -i *qq.im*deb &&  sudo apt install firefox && sudo apt install ubuntu-restricted-extras
 ```
 
-## FCITX-PINYIN
-**[LINK]**: https://www.zhihu.com/question/20432630/answer/161256076
-
-可使用插件实现云输入
-
-```bash
-sudo apt install language-pack-zh-hans
-sudo apt-get install fcitx-googlepinyin
-sudo apt install fcitx-pinyin && sudo apt install fcitx-cloudpinyin
-```
-
-~~**Ibus**(不推荐, 没有联想功能)~~
-~~我选择了ibus的小鹤双拼的输入法，他不具备网络联想功能, 然后我意识到了网络联想真tm是个好东西，Only Shit! (我一下子想到了小学用诺基亚物理键盘敲打的费劲感觉的说)···~~
-~~设置大屏Ubuntu的输入法大小:~~
-~~这个要用到无障碍的字体放大功能，在这个地方也是很是想吐槽的说···~~
-1. ~~在Ubuntu软件仓库里，搜索“ibus”，安装其中的“ibus font setting”。~~
-2. ~~打开这个插件后就可以设置输入法候选字体的大小了。~~
-~~Google 拼音 &~~
-
-## 主题美化
-
-- **Address**: https://www.gnome-look.org/
-- **Position**: `~/.themes`
-```bash
-mkdir -p ~/.themes
-tar -xvf Ant-Dracula.tar -C ~/.themes
-gsettings set org.gnome.desktop.interface gtk-theme "XXX"
-gsettings set org.gnome.desktop.wm.preferences theme "XXX"
-```
-
-### Dash-to-Dock
-
-- 禁用 Ubuntu Dock 的方法 ->  https://zhuanlan.zhihu.com/p/48078003
-- 为什么会有两个 Dock 的贴 -> https://qastack.cn/ubuntu/975387/why-do-i-have-two-docks-in-ubuntu-17-10-desktop.
-
-我采用的是移除 Gnome Shell Ubuntu Dock 包 , 后果是 有的时候开机亮度无法调节, 设置里面的Dock 失效, 前者可以重启解决, 总之问题不大.
-```
-sudo apt remove gnome-shell-extension-ubuntu-dock
-```
-
-
-
-## Font
-
-[LINK]: https://zhuanlan.zhihu.com/p/40434062
-
-**单系统:** https://zhuanlan.zhihu.com/p/40434062
-
-**双系统:**
-
-```bash
-ln -s /Windowsdrive/Windows/Fonts /usr/share/fonts/WindowsFonts # 将字体位置链接到你的 Linux 系统的字体文件夹
-fc-cache # 重新生成 fontconfig 缓存
-```
-
-## SOFTWARE
-
-**TOC**:
-
-- Music
-  - Netease Music
-    - https://music.163.com/#/download
-  - QQ Music
-    - https://github.com/gorquan/QQMusic
-- Editor/Works
-  - Typora
-  - VsCode
-  - Vim
-  - Chrome
-  - WPS
-  - BaidunetDisk
-  - XMind
-  - Master Reader
-    - Shortcuts: https://code-industry.net/masterpdfeditor-help/keyboard_shortcuts/
-  - Cailbre
-  - Audacity
-  - GitKaken
-  - JetBrains
-    - Clion
-    - Pycharm
-  - Clash
-  - Darktable
-  - GIMP
-  - OBS
-  - TeamViewer
-  - Mypainter
-  - Krita
-  - **Build Soteware**:
-    - 坚果云
-    - GoldenDict
-    - Mircosoft To Do
-    - FluentRSS
-    - Ao
-    - Flowchar
-    - Bookworn
-- Chat
-  - QQ
-  - Wechat
-  - Telegram
-- Sys Tools
-  - PulseAudio: 音量调节
-  - Blueman: 蓝牙管理器
-  - Dconf: 系统编辑器
-  - Flameshot: 截图助手
-- Play
-  - Steam
-    - Proxychains
-
-### Apt
+## SOFTWARE Apt
 一般来说, 安装命令有：
 
 ```bash
@@ -139,7 +24,6 @@ sudo apt install -f
 #另一种deb包安装方式
 sudo apt install ./xxxx.deb 
 #安装filename.tar.gz软件,然后在解压目录或者bin文件夹中执行setup.sh文件
-tar -xzvf file.tar.gz
 ```
 **源码安装**: 有些软件没有被收录进软件镜像源，或者说开发者需要去使用他们最新的版本，这时候就要自己去他们的官网或者是代码托管平台下载最新的Linux源码，自己来build。这种方式安装需要解决很多的依赖，安装前多Google。此处还是以tree为例：
 
@@ -152,7 +36,7 @@ tar -xzvf file.tar.gz
   sudo make # make and install
   sudo make instal l# 如果没有配置环境，先用apt安装build-essential
 ```
-**忽略某些依赖安装(Wechat Failure)**:[^4]
++ [忽略某些依赖安装(Wechat Failure)](https://qastack.cn/server/250224/how-do-i-get-apt-to-ignore-some-dependencies)
 
 ```bash
 # Check Depend
@@ -161,13 +45,6 @@ dpkg --info XXX.deb | grep Depends
 sudo apt install XXX.deb-
 # dpkg
 sudo dpkg -i --ignore-depends=<--->  XXX.deb
-```
-简化版命令
-```bash
-sudo apt update -y && sudo apt upgrade -y && sudo apt install git && sudo  apt install python3 && sudo apt install python3-pip && sudo apt install node.js && sudo apt install flameshot && sudo apt install kchmviewer && sudo apt install && sudo apt install gthumb  && sudo apt install audacity 
-wget -qO - https://typora.io/linux/public-key.asc | sudo apt-key add - && sudo add-apt-repository 'deb https://typora.io/linux ./' && sudo apt-get update && sudo apt-get install typora && sudo apt install wget g++ git &&git clone "https://gitee.com/wszqkzqk/deepin-wine-for-ubuntu.git" && cd deepin-wine && sudo ./install.sh &&sudo wget "https://gitee.com/wszqkzqk/deepin-wine-containers-for-ubuntu/raw/master/deepin.com.wechat_2.6.8.65deepin0_i386.deb"  && sudo dpkg -i *wechat*deb && apt install libjpeg62:i386 && sudo wget "https://mirrors.aliyun.com/deepin/pool/non-free/d/deepin.com.qq.im/deepin.com.qq.im_9.1.8deepin0_i386.deb"  && sudo  dpkg -i *qq.im*deb &&  sudo apt install firefox && sudo apt install ubuntu-restricted-extras
-# 配合使用 网易云 & XMind & VSCode & WPS & Mircosoft To Do & 福昕阅读 & Okular & Wine & Abdroid Studio & Clash & JDK & SDK & CPP
-# 配合修改 : QQ修改IPV6
 ```
 
 ### Uninstall
@@ -180,7 +57,7 @@ dpkg --get-selections | grep XXX
 sudo apt purge XXX  #一个带core的package，如果没有带core的package，则是情况而定。
 ```
 
-#### Clean
+### Clean
 ```bash
 sudo apt autoclean
 sudo apt autoremove
@@ -188,269 +65,9 @@ sudo apt autoremove
 dpkg -l |grep ^rc|awk '{print $2}' |sudo xargs dpkg -P 
 ```
 
-#### Typora 
+#### Knowledge For APT & APT-GET
 
-```bash
-wget -qO - https://typora.io/linux/public-key.asc | sudo apt-key add -
-sudo add-apt-repository 'deb https://typora.io/linux ./' && sudo apt update && sudo apt install typora
-```
-#### Deepin QQ && Deepin Wechat [^5]
-
-Deepin-wine: https://github.com/wszqkzqk/deepin-wine-ubuntu
-
-因为采用Deepin前缀, 所以不会和 Wine 产生冲突
-
-```bash
-# deepin-wine容器
-sudo apt install wget g++ git
-git clone "https://gitee.com/wszqkzqk/deepin-wine-for-ubuntu.git" && cd deepin-wine && sudo ./install.sh
-
-#  Wechat 的两个版本, 自己安装的是第二个 && 最后一个是解决微信无法查看发送图片问题
-sudo wget "https://mirrors.huaweicloud.com/deepin/pool/non-free/d/deepin.com.wechat/deepin.com.wechat_2.6.8.65deepin0_i386.deb""https://gitee.com/wszqkzqk/deepin-wine-containers-for-ubuntu/raw/master/deepin.com.wechat_2.6.8.65deepin0_i386.deb"  && sudo dpkg -i *wechat*deb && apt install libjpeg62:i386
-
-
-# QQ(推荐, 后者Emoji会出问题)
-sudo wget "https://mirrors.aliyun.com/deepin/pool/non-free/d/deepin.com.qq.im/deepin.com.qq.im_9.1.8deepin0_i386.deb"  && sudo  dpkg -i *qq.im*deb
-
-
-# Tim
-sudo wget "https://mirrors.aliyun.com/deepin/pool/non-free/d/deepin.com.qq.office/deepin.com.qq.office_2.0.0deepin4_i386.deb" && sudo dpkg -i *qq.office*deb
-```
-解决托盘ICONS: https://extensions.gnome.org/extension/1031/topicons/
-
-QQ Image Question
-
-```bash
-sudo  vim /etc/sysctl.conf
-
-# Add IPv6 disabled
-net.ipv6.conf.all.disable_ipv6 =1
-net.ipv6.conf.default.disable_ipv6 =1
-net.ipv6.conf.lo.disable_ipv6 =1
-
-sudo sysctl -p && sudo touch /etc/rc.local && sudo chmod 755 /etc/rc.local
-
-#!/bin/bash
-# /etc/rc.local
-/etc/sysctl.d
-/etc/init.d/procps restart
-exit 0
-```
-
-#### ~~flash插件(卒)-见下一条~~
-
-~~注意：如b站会发现是没有H5播放的，但是同等条件下Chromium是有的，执行下面的代码~~
-
-#### Browser 
-
-**~~Chromium~~**
-自定义 Chrome 的部分设置(chrome://flags/):
- + Extensions Toolbar Menu -> Dis
- + Font Access APIs -> En
-
-**Firefox**
-
-```bash
- sudo apt update && sudo apt install firefox && sudo apt install ubuntu-restricted-extras
-```
-
-#### ~~electron_ssr~~[^6] [^7] [^8]
-
-~~找包(或者软件商店???), 之后拿到了他的deb包，然后顺着安装会发现没有他的依赖包，提前到设置里面打开网络代理~~
-
-```bash
-sudo dpkg -i ...  #这里会提示你缺少一些必要的依赖包，跟着安装
-sudo apt --fix-broken install
-#  Doc ???
-sudo apt install libcanberra-gtk-module libcanberra-gtk3-module gconf2 gconf-service libappindicator1
-# sudo apt install libssl-dev
-# sudo apt install libsodium-dev
-sudo apt install python
-```
-
-#### Xmind 
-
-去官方下载: https://www.xmind.net/ +果壳里面找到破解版文件.
-
-#### VS code
-
-地址：https://code.visualstudio.com/Download 
-
-记得区设置里面把代理选项勾上.
-
-#### WPS
-
-官网地址: https://linux.wps.cn/
-
-
-#### Node.js & Python & pip & Git &  kchmviewer & gthumb/feh & audacity 
-
-```bash
-sudo apt update -y && sudo apt upgrade -y && sudo apt install git && sudo  apt install python3 && sudo apt install python3-pip && sudo apt install node.js && sudo apt install flameshot && sudo apt install kchmviewer && sudo apt install && sudo apt install feh  && sudo apt install audacity 
-```
-
-flameshot 设置开机自启动:
-```bash
-gnome-session-properties
-```
-
-
-</br>
-
-#### 福昕阅读 & Okular
-
-地址: https://www.foxitsoftware.cn/pdf-reader/
-
-~~福昕的官方不怎么维护他的服务器了，下载速度慢的一批，~~, 国内速度感人, 网上有一个CDN的源可以下载，缺点是没有中文，但是还可。
-
-```Shell
- # 这个是你没有SSR情况下的选择，有了代理速度可以追上宽带
- wget "http://cdn07.foxitsoftgonware.cn/pub/foxit/reader/desktop/linux/2.x/2.1/en_us/FoxitReader2.1.0805_Server_x64_enu_Setup.run.tar.gz" && hmod +x FoxitReader.enu.setup.2.1.0805.x64.run && sudo ./FoxitReader.enu.setup.2.1.0805.x64.run
- # Okular
-sudo apt install okular   # F6开启注释功能，如果出现乱码问题，查看原地址
-```
-
-#### Wine(慎重)
-
-[ori] [Wine](https://wiki.winehq.org/Ubuntu_zhcn)官方网站（上面失效走这）
-
-经过了漫长的几个晚上和下午,  我决定了, 还是弄虚拟机好了, 主要原因是挂了代理还是下载不来这个,  我想说的是网络不好下的 Ubuntu 就是一个 \*\*
-
-```bash
-sudo dpkg --add-architecture i386 
-wget -nc https://dl.winehq.org/wine-builds/winehq.key
-sudo apt-key add winehq.key
-#分支
-sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ eoan main' #Ubuntu 19.10 
-sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ bionic main'#Ubuntu 18.04,Linux Mint 19.x
-sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'#Ubuntu 16.04&Linux Mint 18.x
-sudo apt update
-sudo apt install --install-recommends winehq-stable#稳定分支 	
-sudo apt install --install-recommends winehq-devel#开发分支 	
-sudo apt install --install-recommends winehq-staging#Staging 分支 	
-```
-
-#### 百度网盘
-
-[Ori] : https://pan.baidu.com/download).
-
-
-#### Android Studio
-
-参见Ubuntu 软件商店的直接下载方式.
-
-#### Clash
-
-[GitHub] :https://github.com/Dreamacro/clash
-
-```bash
-tar -zxvf clash-linux-amd64-vXXXX.gz
-sudo mv clash-linux-amd64-vXXXX /usr/local/bin/clash
-sudo chmod +x /usr/local/bin/clash
-clash
-```
-
-此时会在 ~/.config/clash 目录下生成两个文件：config.yaml 和 Country.mmdb；
-
-+ 保持 clash 运行，打开浏览器访问 clash.razord.top 进行策略配置、选择代理线路等等（可能需要根据提示输入IP、端口和口令，具体内容可在 config.yaml 中查看；
-
-+ 在系统网络设置中设置手动代理 Settings>Network>Network Proxy>Manual（设置>网络>代理>手动）。
-
-如果不想一直保持终端打开，可使用 nohup clash 命令启动后台运行。或者希望开机自启动 clash，可将 nohup clash 这段命令加入到前面提到的 start-service.sh 脚本的最后。
-
-**创建桌面图标**
-```bash
-sudo vim /usr/share/applications/Clash.desktop
-vim Clash.desktop
-＃[Desktop Entry] 文件头
-＃Version    版本
-＃Name    应用名称
-＃Name[xx]    不同语言的应用名称
-＃Comment 注释
-＃Exec    执行文件路径
-＃Icon    图标路径
-＃Terminal    是否使用终端
-＃Type    启动器类型
-＃Categories  应用的类型（内容相关）
-```
-
-#### Fusuma & Touchegg
-
-一个控制触控板的命令行程序, 原理是将触控板的手势传到命令行映射到快捷键, 所以不如快捷键来的好, 最后被我卸载了, 但是有两个命令我不知道要怎么恢复, 先放在这里.
-
-```bash
-sudo usermod -a -G input $USER # sudo gpasswd -a $USER input
-gsettings set org.gnome.desktop.peripherals.touchpad send-events enabled
-```
-
-#### Git Kraken
-
-[Ori] : https://www.gitkraken.com/
-
-#### JDK
-
-[Ori] : http://www.oracle.com/technetwork/java/javase/downloads/index.html
-
-```bash
-# Win10 bin/jlink.exe --module-path jmods --add-modules java.desktop --output jre
-bin/jlink --module-path jmods --add-modules java.desktop --output jre
-
-sudo mv jdkXXX /usr/lib/XXX
-sudo vim ~/.bashrc #Bash && ZSH 不一样
-
-export JAVA_HOME=/usr/libl/jdkXXX  
-export JRE_HOME=${JAVA_HOME}/jre  
-export CLASSPATH=.:${JAVA_HOME}/lib:${JRE_HOME}/lib  
-export PATH=${JAVA_HOME}/bin:$PATH
-
-sudo source ~/.bashrc && java --version
-
-```
-
-#### SDK [^10] [^11] [^12] [^13] [^14]
-
-[Ori] : https://developer.android.com/studio#downloads
-
-我记得自己是挂了代理进去设置的, 一直在Download T_T
-
-#### CPP
-
-[Need] : gcc , g++ , (c)make [^15]
-
-Diff between cmake and make 
-[Ori] : https://stackoverflow.com/qu  estions/25789644/difference-between-using-makefile-and-cmake-to-compile-the-code/25790020#25790020
-> Make (or rather a Makefile) is a buildsystem - it drives the compiler and other build tools to build your code.
-> CMake is a generator of buildsystems. It can produce Makefiles, it can produce Ninja build files, it can produce KDEvelop or Xcode projects, it can produce Visual Studio solutions. From the same starting point, the same CMakeLists.txt file. So if you have a platform-independent project, CMake **is****** a way to make it buildsystem-independent as well.
-> If you have Windows developers used to Visual Studio and Unix developers who swear by GNU Make, CMake is (one of) the way(s) to go.
-> I would always recommend using CMake (or another buildsystem generator, but CMake is my personal preference) if you intend your project to be multi-platform or widely usable. CMake itself also provides some nice features like dependency detection, library interface management, or integration with CTest, CDash and CPack.
-> Using a buildsystem generator makes your project more future-proof. Even if you're GNU-Make-only now, what if you later decide to expand to other platforms (be it Windows or something embedded), or just want to use an IDE?
-
-#### Android & Ubuntu PC Transform Films[^16]
-
-+ Xender : http://www.xender.com/
-+ Send-anywhere : https://send-anywhere.com/
-+  Portal: http://portal.pushbullet.com/
-+  Reep. io : https://reep.io/
-+  Snapdrop: https://snapdrop.net/
-+  AirMore: http://airmore.com/
-+  BT Sync: https://www.getsync.com/
-+  file ai: https://fileai.com
-+  Pushbullet: https://www.pushbullet.com/
-+   Telegram
-
-#### ZSH [^17] [^18] [^19] [^20]
-
-#### Mircosoft To do
-
-[Github Ori] : https://github.com/klaussinani/ao
-
-采用和VSCode 相同的技术开发--> Electronjs. 安装完成之后, 自然在走系统代理的时候出现了问题, 如无法登录微软账户的问题；根据 项目的 ISSUE [^21] 可以执行以修复登录问题.
-```bash
-ao --proxy-pac-url= XXXXX
-```
-<br>
-
-#### Knowledge For APT & APT-GET[^22]
+**[LINK]** https://www.sysgeek.cn/apt-vs-apt-get/
 
 **APT**的其它命令选项可以实现与使用 apt-get 时相同的操作。虽然 apt 与 apt-get 有一些类似的命令选项，但它并不能完全向下兼容 apt-get 命令。也就是说，可以用 apt 替换部分 apt-get 系列命令，但不是全部。
 
@@ -479,59 +96,135 @@ To Be Continued......
 
 对于低级操作，仍然需要 apt-get。
 
+### SHORTCUT
+
+#### Desktop Shortcut
+
+| Operation  |                   Effects                    | Operation |             Effects             |
+| :--------: | :------------------------------------------: | :-------: | :-----------------------------: |
+|  Alt + F1  | 聚焦到桌面左侧任务导航栏，可按上下键进行导航 | Alt + F2  |            运行命令             |
+|  Alt + F4  |                 关闭当前窗口                 | Alt + Tab |          切换程序窗口           |
+| Alt + 空格 |                 打开窗口菜单                 |   PrtSc   |            桌面截图             |
+|  Win + A   |                搜索/浏览程序                 |    Win    | 搜索/浏览程序、文件、音乐文件等 |
+|  Win + F   |                搜索/浏览文件                 |  Win + M  |        搜索/浏览音乐文件        |
 
 
-#### 添加应用程序到系统
 
-[参考] : https://www.jianshu.com/p/99d3eebcf17f
+#### Terminal Shortcut
+
+|       Operation       |                 Effects                  |        Operation        |                        Effects                        |
+| :-------------------: | :--------------------------------------: | :---------------------: | :---------------------------------------------------: |
+|    Ctrl + Alt + T     |                 打开终端                 |           Tab           |                 命令或文件名自动补全                  |
+|   Ctrl + Shift + C    |                   复制                   |    Ctrl + Shift + V     |                         粘贴                          |
+|   Ctrl + Shift + T    |        在同一个窗口新建终端标签页        |    Ctrl + Shift + W     |                      关闭标签页                       |
+|   Ctrl + Shift + N    |               新建终端窗口               |    Ctrl + Shift + Q     |                     关闭终端窗口                      |
+| Ctrl + Shift + PageUp |                标签页左移                | Ctrl + Shift + PageDown |                      标签页右移                       |
+|       Ctrl + D        |                关闭标签页                |        Ctrl + C         |                     终止当前任务                      |
+|       Ctrl + L        |                 清除屏幕                 |        Ctrl + P         |                  显示上一条历史命令                   |
+|       Ctrl + N        |            显示下一条历史命令            |        Ctrl + R         |                   反向搜索历史命令                    |
+|      Ctrl + J/M       |          回车（同enter键功能）           |        Ctrl + A         |                    光标移动到行首                     |
+|       Ctrl + E        |              光标移动到行尾              |        Ctrl + B         |           关闭想后移动一个位置（backward）            |
+|       Ctrl + Z        |          把当前任务放到后台运行          |      Ctrl + PageUp      |                   前一个终端标签页                    |
+|    Ctrl + PageDown    |             下一个终端标签页             |           F1            |                     打开帮助指南                      |
+|        Win + W        |               展示所有窗口               |         Win + T         |                      打开回收站                       |
+|    Ctrl + Win + ↓     |           还原/最小化当前窗口            |     Ctrl + Win + D      |                    最小化所有窗口                     |
+|       Ctrl + &        |        恢复Ctrl + H/D/W删除的内容        |     Ctrl + Win + ↑      |                    最大化当前窗口                     |
+|       Ctrl + D        |  删除光标位置的一个字符（delete键功能）  |        Ctrl + W         | 删除光标位置的前一个单词（Alt + Backspace组合键功能） |
+|       Ctrl + K        |      剪切从光标位置到行末的所有字符      |        Ctrl + Y         |            粘贴Ctrl + U/Ctrl + K剪切的内容            |
+|       Ctrl + U        | 剪切从行的开头到光标前一个位置的所有字符 |       Ctrl + H/\*       |      删除光标位置的前一个字符（backspace键功能）      |
+|       Ctrl + ←        |        光标移动到下一个单词的词尾        |        Ctrl + →         |              光标移动到上一个单词的词首               |
+|        Alt + H        |          打开“帮助”菜单（help）          |        Ctrl + T         |       将光标位置的字符和前一个字符进行位置交换        |
+|        Alt + V        |          打开“查看“菜单（view）          |         Alt + T         |              打开“终端”菜单（terminal）               |
+|        Alt + E        |          打开“编辑”菜单（edit）          |         Alt + S         |               打开“搜索”菜单（search）                |
+|          F11          |                 全屏切换                 |         Alt + F         |                打开“文件”菜单（file）                 |
+
+补充：
+
+2次连续Tab/4次连续Esc/2次连续Ctrl + I|将显示所有命令和工具名称
 
 
-#### Gedit Namo Vim Vi [^23][^24]
 
-linux下有很多文本编辑器，其中系统都会自带nano和vi这两个最基本的编辑器。
+#### Gedit Shortcut
 
-+ Nnno非常適合編輯配置文件，但是如果要進行編程，最好使用Vim或Emacs。 Nano支持突出顯示。但這是非常主觀的。
+| Operation |  Effects   |    Operation     |  Effects   |
+| :-------: | :--------: | :--------------: | :--------: |
+| Ctrl + N  |  新建文档  |     Ctrl + W     |  关闭文档  |
+| Ctrl + S  |  保存文档  | Ctrl + Shift + S |   另存为   |
+| Ctrl + F  |    搜索    |     Ctrl + H     | 搜索并替换 |
+| Ctrl + I  | 跳到某一行 |     Ctrl + C     |    复制    |
+| Ctrl + V  |    粘贴    |     Ctrl + X     |    剪切    |
+| Ctrl + Q  |    退出    |                  |            |
 
-+ vi是老式的文字处理器，功能已经很齐全。不管好不好用，既然大家这么推崇，肯定有他的好处，我们先学习了肯定不会有坏处。vi使用于文本编辑，但是vim更适用于coding。
+使用 `ctrl + ;`（此为 fcitx 自带剪贴板插件） ：查看粘贴板的内容，此时显示的就不只有一条内容，一般而言是最近的五次复制的内容。使用数字键进行选择。
 
-+ vim是vim 的升级版, Vim是模態的意思是每個鍵在不同的模式中意味著不同的東西。
-  + 多级撤消 : vi里按 u只能撤消上次命令
-  + 易用性: 运行于unix,windows ,mac等操作平台
-  + 语法加亮: vim可以用不同的颜色来加亮你的代码。
-  + 可视化操作: 即vim不仅可以在终端运行，也可以运行于x window、 mac os、 windows。
-  + 对vi的完全兼容: 某些情况下，你可以把vim当成vi来使用。
 
-+ Geany 有很好的功能，內置終端窗口非常好。我將它用於大多數編程項目。
 
-+ Gedit 是图形化的编辑程序, 学习成本低, 簡單輕巧，但你必須安裝一堆插件才能趕上Geany的普通內置功能，比如代碼折疊等。而Geany插件將為您提供額外的功能，如版本控製集成，可選和non-intrusive項目管理，在功能定義和聲明等之間跳轉。而Geany中可用的可配置鍵綁定允許您幾乎完全按照自己的喜好進行設置 – 盡管默認值也很不錯。 Gedit可以捆綁Python解釋器，但是Geany捆綁了整個虛擬終端。
+#### Screen ShortCut
 
-+ Emacs 具有語法突出顯示並支持擴展, 並且可以通過其嵌入的Lisp(elisp)方言進行擴展。它還具有許多統計程序的模式，支持tex，日曆，郵件閱讀實用程序，俄羅斯方塊甚至精神科醫生。 Emacs(或Vim，但對於統計數據不太好)值得學習，因為它們都是跨平台的，並且支持世界上幾乎所有的編程語言。
+采用Flameshot[^9] 配合自定义快捷键即可使用
+
 
 **Reference**
 
 [More] -> https://zhuanlan.zhihu.com/p/139305626
 
-[^1]: https://blog.csdn.net/ysy950803/article/details/78507892 
-[^2]: 
-[^3]: 
-[^4]: https://qastack.cn/server/250224/how-do-i-get-apt-to-ignore-some-dependencies
-[^5]: https://zhuanlan.zhihu.com/p/144286142
-[^6]: https://github.com/qingshuisiyuan/electron-ssr-backup/blob/master/Ubuntu.md
-[^7]: https://github.com/qingshuisiyuan/electron-ssr-backup/blob/master/issue.md
-[^8]: https://alanlee.fun/2018/05/18/ubuntu-ssr/#%E5%90%AF%E5%8A%A8-SSR
-[^9]: https://zhuanlan.zhihu.com/p/45919661
-[^10]: https://developer.android.com/studio/intro/update#sdk-manager 
-[^11]: https://developer.android.com/studio#cmdline-tools
-[^12]: https://stackoverflow.com/questions/34556884/how-to-install-android-sdk-on-ubuntu
-[^13]: https://www.jianshu.com/p/8a2fad182168
-[^14]: https://blog.csdn.net/x199699/article/details/82354051
-[^15]: https://code.visualstudio.com/docs/cpp/config-linux
-[^16]: https://www.ifanr.com/app/668324
-[^17]: https://www.sysgeek.cn/install-zsh-shell-ubuntu-18-04/
-[^18]: https://my.oschina.net/u/2266513/blog/3103451
-[^19]: https://zhuanlan.zhihu.com/p/37195261
-[^20]: https://www.jianshu.com/p/b61473e22c8b
-[^21]: https://github.com/klaussinani/ao/issues/94
-[^22]: https://www.sysgeek.cn/apt-vs-apt-get/
-[^23]:  https://developer.aliyun.com/article/309383
-[^24]:  https://ubuntuqa.com/zh-tw/article/1230.html
+## TRASH SOTWARE
+### 福昕阅读 & Okular
+地址: https://www.foxitsoftware.cn/pdf-reader/
+
+~~福昕的官方不怎么维护他的服务器了，下载速度慢的一批，~~, 国内速度感人, 网上有一个CDN的源可以下载，缺点是没有中文，但是还可。
+
+```Shell
+ # 这个是你没有SSR情况下的选择，有了代理速度可以追上宽带
+ wget "http://cdn07.foxitsoftgonware.cn/pub/foxit/reader/desktop/linux/2.x/2.1/en_us/FoxitReader2.1.0805_Server_x64_enu_Setup.run.tar.gz" && hmod +x FoxitReader.enu.setup.2.1.0805.x64.run && sudo ./FoxitReader.enu.setup.2.1.0805.x64.run
+ # Okular
+sudo apt install okular   # F6开启注释功能，如果出现乱码问题，查看原地址
+```
+
+
+### Wine(慎重)
+[ori] [Wine](https://wiki.winehq.org/Ubuntu_zhcn)官方网站（上面失效走这）
+
+经过了漫长的几个晚上和下午,  我决定了, 还是弄虚拟机好了, 主要原因是挂了代理还是下载不来这个,  我想说的是网络不好下的 Ubuntu 就是一个 \*\*
+
+```bash
+sudo dpkg --add-architecture i386 
+wget -nc https://dl.winehq.org/wine-builds/winehq.key
+sudo apt-key add winehq.key
+#分支
+sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ eoan main' #Ubuntu 19.10 
+sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ bionic main'#Ubuntu 18.04,Linux Mint 19.x
+sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'#Ubuntu 16.04&Linux Mint 18.x
+sudo apt update
+sudo apt install --install-recommends winehq-stable#稳定分支 	
+sudo apt install --install-recommends winehq-devel#开发分支 	
+sudo apt install --install-recommends winehq-staging#Staging 分支 	
+```
+
+### Fusuma & Touchegg 
+一个控制触控板的命令行程序, 原理是将触控板的手势传到命令行映射到快捷键, 所以不如快捷键来的好, 最后被我卸载了, 但是有两个命令我不知道要怎么恢复, 先放在这里.
+
+```bash
+sudo usermod -a -G input $USER # sudo gpasswd -a $USER input
+gsettings set org.gnome.desktop.peripherals.touchpad send-events enabled
+```
+### Pinyin
+
+~~**Ibus**(不推荐, 没有联想功能)~~
+~~我选择了ibus的小鹤双拼的输入法，他不具备网络联想功能, 然后我意识到了网络联想真tm是个好东西，Only Shit! (我一下子想到了小学用诺基亚物理键盘敲打的费劲感觉的说)···~~
+~~设置大屏Ubuntu的输入法大小:~~
+~~这个要用到无障碍的字体放大功能，在这个地方也是很是想吐槽的说···~~
+1. ~~在Ubuntu软件仓库里，搜索“ibus”，安装其中的“ibus font setting”。~~
+2. ~~打开这个插件后就可以设置输入法候选字体的大小了。~~
+
+
+### ~~QQ delete Qzone~~
+> QQ一个高明的方法是该文件采用了不同形式编码集合的方式保存的文件，如果对源文件编辑会破坏部分代码，会导致部分报错，仍然可以使用
+- **[Loc]：**Tencent -> QQ -> Plugin -> Com.Tencent.Qzone
+- **[Way]：**编辑 Bundle 的标签。
+
+### Youdao Note
+> 因为对功能的阉割以及非全平台而弃用
+~~打开自己有道云的安装路径下的这个文件：`\Youdao\YoudaoNote\theme\default\skin.xml`开始编辑。后`Ctrl+F`搜索`PanelAd`把`PanelAd Bounds`的值`0.0.0.0`(修改之前记得提前做好备份……) `<PanelAd Bounds="0,0,0,161" DockStyle="bottom"></PanelAd>`~~
+~~<font size =1>[吐槽]:从小米便签的编辑功能到它的待办功能，只做差不多的小米生态彻底失望了。便签反馈了三年，开卡了三年无果，真的只剩下骂街了，可能是受众小的缘故吧。待办换Microsoft的TODO，笔记换来换去还是有道云的吧，**排版的方式多、直接暴力保存网页，想要的内容点点手指就可以、关键是公司相比较靠谱……**说起来生态，又有一个经济学原理验证了——“科斯定律“，也可能我没必要要求一个手机公司在应用生态方面做的和高三个层次的Apple相比。</font>~~
+
